k8s/deploy/keycloak-service-gce.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-service
  namespace: keycloak
  annotations:
    cloud.google.com/backend-config: '{"default":"keycloak-service"}'
spec:
  type: ClusterIP
  selector:
    app: keycloak
    app.kubernetes.io/instance: keycloak
    app.kubernetes.io/managed-by: keycloak-operator
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
    - name: management
      port: 9000
      targetPort: 9000
      protocol: TCP
