k8s/deploy/yas-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yas-ingress
  namespace: yas
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.allow-http: "true"
spec:
  rules:
  - host: storefront.yas.local.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: storefront-bff
            port:
              number: 80
  - host: backoffice.yas.local.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backoffice-bff
            port:
              number: 80
  - host: api.yas.local.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-gateway-nodeport
            port:
              number: 80
